--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,15 @@
     "jellyfish/queue": "dev-master",
     "jellyfish/pimple": "dev-master",
     "jellyfish/process": "dev-master",
-    "jellyfish/serializer": "dev-master"
+    "jellyfish/serializer": "dev-master",
+    "jellyfish/uuid": "dev-master"
   },
   "require-dev": {
     "codeception/codeception": "~3.1.2",
     "mikey179/vfsstream": "~1.6.7",
     "php-coveralls/php-coveralls": "~2.1.0",
     "phpmd/phpmd": "~2.7.0",
-    "phpro/grumphp": "~0.16.1",
-    "phpstan/phpstan": "~0.11.2",
+    "phpstan/phpstan": "~0.12.0",
     "roave/security-advisories": "dev-master",
     "sebastian/phpcpd": "~4.1.0",
     "squizlabs/php_codesniffer": "~3.5.2"
