--- a/composer.json
+++ b/composer.json
@@ -9,22 +9,20 @@
     }
   ],
   "require": {
-    "jellyfish/lock": "dev-master",
-    "jellyfish/queue": "dev-master",
-    "jellyfish/pimple": "dev-master",
-    "jellyfish/process": "dev-master",
-    "jellyfish/serializer": "dev-master",
-    "jellyfish/uuid": "dev-master"
+    "jellyfish/lock": "^1.0.0",
+    "jellyfish/queue": "^1.0.0",
+    "jellyfish/pimple": "^1.0.0",
+    "jellyfish/process": "^1.0.0",
+    "jellyfish/serializer": "^1.0.0",
+    "jellyfish/uuid": "^1.0.0"
   },
   "require-dev": {
-    "codeception/codeception": "~3.1.2",
-    "mikey179/vfsstream": "~1.6.7",
-    "php-coveralls/php-coveralls": "~2.1.0",
-    "phpmd/phpmd": "~2.7.0",
-    "phpstan/phpstan": "~0.12.0",
-    "roave/security-advisories": "dev-master",
-    "sebastian/phpcpd": "~4.1.0",
-    "squizlabs/php_codesniffer": "~3.5.2"
+    "codeception/codeception": "^4.0",
+    "mikey179/vfsstream": "^v1.6",
+    "phpstan/phpstan": "^0.12",
+    "roave/security-advisories": "dev-master as 1.0.0",
+    "sebastian/phpcpd": "^6.0",
+    "squizlabs/php_codesniffer": "^3.0"
   },
   "autoload": {
     "psr-4": {
